--- a/src/index.pcss
+++ b/src/index.pcss
@@ -519,3 +519,23 @@ input:-webkit-autofill {
     }
   }
 }
+.cr-decimal__opacity {
+  opacity: 1;
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .cr-table {
+      &__head tr th {
+          top: calc(var(--gap) * 4.8);
+      }
+  }
+}
+
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .cr-table {
+      &__head tr th {
+          top: calc(var(--gap) * 7.3);
+      }
+  }
+}
