--- a/src/screens/History/HistoryTab.pcss
+++ b/src/screens/History/HistoryTab.pcss
@@ -126,7 +126,6 @@
 
         .cr-table-container {
             .cr-table {
-                display: block;
                 overflow: scroll;
             }
         }
@@ -161,7 +160,6 @@
 
     .cr-table-container {
         .cr-table {
-            display: block;
             overflow: scroll;
         }
     }
