--- a/src/screens/OrdersTabScreen/OrdersTabScreen.pcss
+++ b/src/screens/OrdersTabScreen/OrdersTabScreen.pcss
@@ -163,7 +163,6 @@
 
         .cr-table-container {
             .cr-table {
-                display: block;
                 overflow: scroll;
             }
         }
